# MeteoSwiss

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/meteoschweiz/historic/: historic_handler.py
src/swisswx/: __init__.py
src/swisswx/metadata/: stations.py
tests/: test_meteo_swiss.py
