[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteoswiss"
version = "0.1.0"
description = "Python package for accessing and processing MeteoSwiss weather data"
readme = "README.md"
authors = [
    {name = "Gangireddy Sai Jithendra", email = "jithenkumar1@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0"
]

[project.urls]
"Homepage" = "https://github.com/saijithendr/MeteoSwiss"

[tool.ruff]
# Set the line length
line-length = 88

# Target Python version
target-version = "py39"

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable specific rule sets
extend-select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "W191",   # Indentation contains tabs
]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["meteoschweiz"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]